音楽を選ぶリンクを追加

--- a/text/index.html
+++ b/text/index.html
@@ -42,6 +42,7 @@
         <h2>音楽生成🎶</h2>
         <p>AIを使用し、実際にプレイリストに流す音楽を生成していただきます!!</p>
         <a href="https://suno.com/" class="btn">音楽を生成する</a>
+        <a href="https://dova-s.jp/" class="btn">音楽を選ぶ</a>
       </section>
 
       <section id="design">
